docs/v0.9.0/_sources/how_to/work_with_microtvm/index.rst.txt
:orphan:

.. _tutorial-micro:

Work With microTVM
------------------
microTVM enables inference on bare-metal platforms, for example, those without
a traditional Operating System such as Linux, OS X, or Windows. These how-tos
demonstrate how to tune and deploy models with microTVM.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to autotune a model using the C runtime.">

.. only:: html

  .. image:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_autotune_thumb.png
    :alt: Autotuning with microTVM

  :ref:`sphx_glr_how_to_work_with_microtvm_micro_autotune.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Autotuning with microTVM</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This section contains an example of how to use TVM to run a model on an Arm(R) Cortex(R)-M55 CP...">

.. only:: html

  .. image:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_ethosu_thumb.png
    :alt: Running TVM on bare metal Arm(R) Cortex(R)-M55 CPU and Ethos(TM)-U55 NPU with CMSIS-NN

  :ref:`sphx_glr_how_to_work_with_microtvm_micro_ethosu.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Running TVM on bare metal Arm(R) Cortex(R)-M55 CPU and Ethos(TM)-U55 NPU with CMSIS-NN</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to launch microTVM Reference Virtual Machines. You can use these to ...">

.. only:: html

  .. image:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_reference_vm_thumb.png
    :alt: microTVM Reference Virtual Machines

  :ref:`sphx_glr_how_to_work_with_microtvm_micro_reference_vm.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">microTVM Reference Virtual Machines</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial is an introduction to working with microTVM and a TFLite model with Relay.">

.. only:: html

  .. image:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_tflite_thumb.png
    :alt: microTVM with TFLite Models

  :ref:`sphx_glr_how_to_work_with_microtvm_micro_tflite.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">microTVM with TFLite Models</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how MobileNetV1 models can be trained to fit on embedded devices, and how t...">

.. only:: html

  .. image:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_train_thumb.png
    :alt: Training Vision Models for microTVM on Arduino

  :ref:`sphx_glr_how_to_work_with_microtvm_micro_train.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Training Vision Models for microTVM on Arduino</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial explains how to compile a tiny model for a micro device, build a program on Zephy...">

.. only:: html

  .. image:: /how_to/work_with_microtvm/images/thumb/sphx_glr_micro_tvmc_thumb.png
    :alt: Executing a Tiny Model with TVMC Micro

  :ref:`sphx_glr_how_to_work_with_microtvm_micro_tvmc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Executing a Tiny Model with TVMC Micro</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /how_to/work_with_microtvm/micro_autotune
   /how_to/work_with_microtvm/micro_ethosu
   /how_to/work_with_microtvm/micro_reference_vm
   /how_to/work_with_microtvm/micro_tflite
   /how_to/work_with_microtvm/micro_train
   /how_to/work_with_microtvm/micro_tvmc



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
